--- a/typing/HomePage.xaml
+++ b/typing/HomePage.xaml
@@ -26,8 +26,8 @@
             <RowDefinition Height="2"/>
         </Grid.RowDefinitions>
         <TextBlock Text="Typing - Home" Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP"/>
-        <Button Click="Go_title" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="3">タイトル</Button>
-        <Button Click="Go_setting" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2">設定</Button>
+        <Button Click="Go_title" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="3" Style="{DynamicResource Button}">タイトル</Button>
+        <Button Click="Go_setting" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2" Style="{DynamicResource Button}">設定</Button>
         <Grid Grid.Row="1" Margin="76,20,76,20">
             <Grid.RowDefinitions>
                 <RowDefinition Height="20"/>
@@ -41,16 +41,16 @@
                     <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Column="2" Content="参照⇗" Click="Button_Click" FontSize="12"/>
-                <Button Grid.Column="3" Content="OK" Click="menu_update" FontSize="12" Height="20" VerticalAlignment="Top"/>
+                <Button Grid.Column="2" Content="参照⇗" Click="Button_Click" FontSize="12" Style="{DynamicResource Button}"/>
+                <Button Grid.Column="3" Content="OK" Click="menu_update" FontSize="12" Height="20" VerticalAlignment="Top" Style="{DynamicResource Button}"/>
                 <TextBox Grid.Column="1" x:Name="serchdir"/>
                 <TextBlock Grid.Column="0" Text="問題のあるフォルダを選択"/>
             </Grid>
 
-            <ListView Grid.Row="1" x:Name="Menu" Background="#FFEBFFF9">
+            <ListView Grid.Row="1" x:Name="Menu" Foreground="{DynamicResource cButtonFontcolor}" Background="{DynamicResource cFrameBackground}">
             </ListView>
 
-            <Button Grid.Row="2" Content="スタート" Click="start" FontSize="12"/>
+            <Button Grid.Row="2" Content="スタート" Click="start" FontSize="12" Style="{DynamicResource Button}"/>
         </Grid>
     </Grid>
 </Page>
