--- a/typing/SettingPage.xaml
+++ b/typing/SettingPage.xaml
@@ -25,7 +25,7 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="2"/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP"><Run Text="Typing - " Foreground="{DynamicResource cFontcolor}"/><Run Text="Setting"/></TextBlock>
+        <TextBlock Grid.Row="0" FontSize="30" TextAlignment="left" Height="60" Padding="10,10,10,10" VerticalAlignment="Top" Background="#E5E7D8D8" FontFamily="Noto Sans Light,Noto Sans JP">Typing - Setting</TextBlock>
         <Button Click="save_data" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="2" Foreground="{DynamicResource cFontcolor}">保存</Button>
         <Button Click="Go_home" FontSize="15" FontFamily="Noto Sans Light,Noto Sans JP" Grid.Row="3" Foreground="{DynamicResource cFontcolor}">ホーム</Button>
         <Grid Grid.Row="1" Margin="76,20,76,0" ShowGridLines="False">
